fix navbar z-index

--- a/src/components/navbar/@navbar.scss
+++ b/src/components/navbar/@navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   position: sticky;
   top: 0;
-  z-index: 9999;
+  z-index: 1;
   background-color: white;
   display: flex;
   align-items: center;
